# Telegram-Archive

./: .coderabbit.yaml  .env.example  .ghost-portfolio.yml  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-publish-dev.yml  dockerhub-description.yml
alembic/: env.py
alembic/versions/: 20241218_0001_001_initial_schema.py  20260128_005_v6_schema_normalization.py
docs/: CHANGELOG.md  MERGERFS-TIPS.md
scripts/: entrypoint.sh
src/: __init__.py  config.py  connection.py  export_backup.py  listener.py  message_utils.py  realtime.py  scheduler.py  telegram_backup.py
src/db/: __init__.py  adapter.py  base.py  migrate.py  models.py
src/web/: main.py  push.py
src/web/static/: sw.js
src/web/templates/: index.html
tests/: test_config.py  test_db_adapter.py  test_gap_fill.py  test_listener.py  test_symlink_dedup.py  test_telegram_backup.py  test_telegram_proxy.py
